IRMS basic functionalities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.application.name=Incident
+
+server.port:8091
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost/Incident
+spring.datasource.username=postgres
+spring.datasource.password=091235AZaz.
+spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.coopbankoromiasc.com
+spring.mail.port=587
+spring.mail.username=Jibril.Kalifa@coopbankoromiasc.com
+spring.mail.password=Ceep#4321
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
