initial commit for V2 health check feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Incident
 
-server.port:8091
+#server.port:8091
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.url=jdbc:postgresql://10.12.51.71/incident
-spring.datasource.url=jdbc:postgresql://localhost:5432/Incident
+spring.datasource.url=jdbc:postgresql://localhost/Incident
+#spring.datasource.url=jdbc:postgresql://10.12.51.71:5432/incident
 spring.datasource.username=postgres
 spring.datasource.password=091235AZaz.
 spring.jpa.hibernate.ddl-auto=update
@@ -21,11 +21,21 @@ grafana.api.token=glsa_s8fneuXXPdWsJYCxQRdMBYNU40zvhYzV_85a7ac86
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.debug=true
 
+##SSL
+#
+server.port=8443
+#server.ssl.enabled=true
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-store=file:/home/jibrilk/portal/backend/irms.p12
+#server.ssl.key-store-password=Crreep#4321
+#server.ssl.key-alias=irms
+#logging.level.org.springframework.security=DEBUG
+
 
 spring.mail.host=smtp.coopbankoromiasc.com
 spring.mail.port=587
 spring.mail.username=jibrilk
-spring.mail.password=Cwwp#4321
+spring.mail.password=Crrwwp#4321
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
